fixed page too big on mobile

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -250,7 +250,6 @@ ul a {
 #search.no-input .title {
   display: block;
   font-size: 55px;
-  width: 580px;
   padding-bottom: 32px;
 }
 
